# Server

./: .gitignore  CMakeLists.txt  README.md
data/: blur.db  detections.db
models/: detect_192.tflite  fall_192.tflite
scripts/: build.sh  setup.sh
src/: AnomalyDetector.cpp  AnomalyDetector.h  ApiService.cpp  ApiService.h  AudioNotifier.cpp  AudioNotifier.h  DatabaseManager.cpp  DatabaseManager.h  DetectionData.h  STM32Protocol.cpp  STM32Protocol.h  SerialCommunicator.cpp  SerialCommunicator.h  SharedContext.h  StreamProcessor.cpp  StreamProcessor.h  SystemMonitor.cpp  SystemMonitor.h  detector.cpp  detector.h  fall.cpp  fall.h  main.cpp  segmenter.cpp  segmenter.h  types.h
src/driver/led_pwm/: Makefile  README.md  led_pwm.dts  led_pwm_dev.c  test_led.c  test_led.cpp
src/driver/led_pwm/led_controller/: led_fade_manager.cpp  led_fade_manager.h  led_fade_test.cpp  led_pwm_controller.cpp  led_pwm_controller.h  led_test
src/driver/mic/: Makefile  ads1115_driver.c  ads1115_test.cpp  veda_mic.dts
src/driver/mic/mic_cotroller/: main.cpp  mic_controller.cpp  mic_controller.h
src/driver/mic/old/: Makefile  a.out  adc_log.csv  read_ads1115  read_ads1115.c  record_test.c  tesT.py
src/yolo_backend/include/utils/: common.h
src/yolo_backend/src/nn/: autobackend.cpp  onnx_model_base.cpp
src/yolo_backend/src/utils/: common.cpp
